--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>#{get 'title' /}</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
-        #{get 'moreStyles' /}
-        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-        <script src="@{'/public/javascripts/jquery-1.4.2.min.js'}" type="text/javascript" charset="utf-8"></script>
-        #{get 'moreScripts' /}
-    </head>
-    <body>
-        #{doLayout /}
-    </body>
+	<head>
+		<title>Great People :: #{get 'title' /}</title>
+
+		<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
+		<meta charset="utf-8">
+		<link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+
+		<link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
+		#{get 'moreStyles' /}
+		<script src="@{'/public/javascripts/jquery-1.4.2.min.js'}" type="text/javascript" charset="utf-8"></script>
+		#{get 'moreScripts' /}
+
+	</head>
+	<body>
+		<div id="wrapper">
+			<a href="/" id="logo">Great People</a>
+			<head>
+				<nav>
+					<ul>
+						<li class="submitted">Submited</li>
+						<li class="inProcess">In process</li>
+						<li class="archived">Archived</li>
+					</ul>
+				</nav>
+			</head>
+			<div id="content">
+				#{doLayout /}
+			</div>
+		</div>
+	</body>
 </html>
