--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,4 +1,9 @@
 #{extends 'main.html' /}
 #{set title:'Home' /}
-
 <h1>Liste des candidats</h1>
+
+<script type="text/javascript" charset="utf-8">
+    var Resume = Backbone.Model.extend({
+    
+    });
+</script>
