--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Great People :: #{get 'title' /}</title>
-
-		<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
-		<meta charset="utf-8">
-		<link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-
-		<link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
-		<link href='http://fonts.googleapis.com/css?family=Neuton&subset=latin' rel='stylesheet' type='text/css'> 
-		#{get 'moreStyles' /}
-		<script src="@{'/public/javascripts/jquery-1.4.2.min.js'}" type="text/javascript" charset="utf-8"></script>
-		#{get 'moreScripts' /}
-
-	</head>
-	<body>
-		<header>
-			<a href="/" id="logo">Great People</a>
-			<nav>
-				<ul>
-					<li class="submitted"><a class="active" href="#s">Submited</a></li>
-					<li class="inProcess"><a href="#s">In process</a></li>
-					<li class="archived"><a href="#s">Archived</a></li>
-				</ul>
-			</nav>
-		</header>
-		<div id="wrapper">
-			#{doLayout /}
-		</div>
-	</body>
+    <head>
+        <title>Great People :: #{get 'title' /}</title>
+        <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
+        <meta charset="utf-8">
+        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+        <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
+        <link href='http://fonts.googleapis.com/css?family=Neuton&subset=latin' rel='stylesheet' type='text/css'>
+        #{get 'moreStyles' /}
+        <script src="@{'/public/javascripts/lib/jquery-1.4.4.min.js'}" type="text/javascript" charset="utf-8"></script>
+        <script src="@{'/public/javascripts/lib/underscore-min.js'}" type="text/javascript" charset="utf-8"></script>
+        <script src="@{'/public/javascripts/lib/backbone.js'}" type="text/javascript" charset="utf-8"></script>
+        #{get 'moreScripts' /}
+    </head>
+    <body>
+        <header>
+            <a href="/" id="logo">Great People</a>
+            <nav>
+                <ul>
+                    <li class="submitted"><a class="active" href="#s">Submited</a></li>
+                    <li class="inProcess"><a href="#s">In process</a></li>
+                    <li class="archived"><a href="#s">Archived</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div id="wrapper">
+            #{doLayout /}
+        </div>
+    </body>
 </html>
