--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,6 +14,13 @@
         #{get 'moreScripts' /}
     </head>
     <body>
+        <div id="menu-bar">
+            <div id="toplinks">
+                <span class="username">${user.openid}</span>|
+                <span><a href="@{Auth.logout()}">logout</a></span>
+            </div>
+        </div>
+
         <header>
             <a href="/" id="logo">Great People</a>
             <nav>
