--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,8 +16,7 @@
     <body>
         <div id="menu-bar">
             <div id="toplinks">
-                <span class="username">${user.openid}</span>|
-                <span><a href="@{Auth.logout()}">logout</a></span>
+                <span class="username">${user.openid}</span>
             </div>
         </div>
 
