Retrieve email and name from Google OpenID, Add the FetchEmails job (don't forget to conf/credentials.conf file)

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,7 +16,7 @@
     <body>
         <div id="menu-bar">
             <div id="toplinks">
-                <span class="username">${user.openid}</span>
+                <span class="username">${session.name} (${session.email})</span>
             </div>
         </div>
 
