Start the index page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,13 +22,7 @@
 
         <header>
             <a href="/" id="logo">Great People</a>
-            <nav>
-                <ul>
-                    <li class="submitted"><a class="active" href="#s">Submited</a></li>
-                    <li class="inProcess"><a href="#s">In process</a></li>
-                    <li class="archived"><a href="#s">Archived</a></li>
-                </ul>
-            </nav>
+            #{get 'nav' /}
         </header>
         <div id="wrapper">
             #{doLayout /}
