--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,119 +1,199 @@
 @import "reset.css";
 
 body {
-	background: #d5dade;
+    background: #d5dade;
 }
 
 a {
-	color: #546e87;
-	text-decoration: none;
+    color: #546e87;
+    text-decoration: none;
 }
 a:hover {
-	color: #3e5469;
+    color: #3e5469;
 }
 
 #logo {
-	display: block;
-	width: 200px;
-	margin: 0 auto;
-	padding: 20px 0 10px;
-	text-align: center;
-	color: #fff;
-	font-size: 32px;
-	font-family: 'Neuton', serif;
-	font-weight: normal;
-	-webkit-text-shadow: #59636c 1px 1px 0;
-	-moz-text-shadow: #59636c 1px 1px 0;
-	text-shadow: #59636c 1px 1px 0;
+    margin-left: -270px;
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    color: #fff;
+    font-size: 32px;
+    font-family: 'Neuton', serif;
+    font-weight: normal;
+    -webkit-text-shadow: #59636c 1px 1px 0;
+    -moz-text-shadow: #59636c 1px 1px 0;
+    text-shadow: #59636c 1px 1px 0;
 }
 
-#menu-bar {
-	border-bottom: solid 1px black;
-	width: 100%;
-	text-align: right;
-	padding: 2px 20px 2px 5px;
+menu {
+    margin-right: -275px;
+    position: absolute;
+    right: 50%;
+    text-align: right;
+    padding: 4px 10px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#54626e), to(#6e7b87));
+    background: -moz-linear-gradient(top, #54626e, #6e7b87);
+    background: gradient(linear, left top, left bottom, from(#54626e), to(#6e7b87));
+    -webkit-box-shadow: inset #98a9b9 0 -1px 0;
+    -moz-box-shadow: inset #98a9b9 0 -1px 0;
+    box-shadow: inset #98a9b9 0 -1px 0;
+    -webkit-border-radius: 0 0 3px 3px;
+    -moz-border-radius: 0 0 3px 3px;
+    border-radius: 0 0 3px 3px;
+    color: #fff;
+    font-size: 12px;
 }
-
+menu ul {
+    margin: 0;
+}
+menu li {
+    list-style-type: none;
+}
+menu .user-mail {
+    color: #becbd8;
+}
 
 header {
-	background: #6e7b87;
-	background: -webkit-gradient(linear, left top, left bottom, from(#8795a2), to(#6e7b87));
-	background: -moz-linear-gradient(top, #f3f3f3, #dbdbdb);
-	background: gradient(linear, left top, left bottom, from(#f3f3f3), to(#dbdbdb));
-	-webkit-box-shadow: inset #59636c 0 -1px 0;
-	-moz-box-shadow: inset #59636c 0 -1px 0;
-	box-shadow: inset #59636c 0 -1px 0;
+    padding-top: 80px;
+    background: #6e7b87;
+    background: -webkit-gradient(linear, left top, left bottom, from(#8795a2), to(#6e7b87));
+    background: -moz-linear-gradient(top, #8795a2, #6e7b87);
+    background: gradient(linear, left top, left bottom, from(#8795a2), to(#6e7b87));
+    -webkit-box-shadow: inset #59636c 0 -1px 0;
+    -moz-box-shadow: inset #59636c 0 -1px 0;
+    box-shadow: inset #59636c 0 -1px 0;
 }
 
 #wrapper, nav {
-	width: 800px;
-	margin: 0 auto;
-	background: #f2f2f2;
+    width: 550px;
+    margin: 0 auto;
+    background: #f2f2f2;
 }
 
 nav {
-	background: #f2f2f2;
-	background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#dbdbdb));
-	background: -moz-linear-gradient(top, #f3f3f3, #dbdbdb);
-	background: gradient(linear, left top, left bottom, from(#f3f3f3), to(#dbdbdb));
-	-webkit-border-radius: 3px 3px 0 0;
-	-moz-border-radius: 3px 3px 0 0;
-	border-radius: 3px 3px 0 0;
-	-webkit-box-shadow: inset #b4b5b6 0 -1px 0 , #fff 0 1px 0 inset, #59636c 0 -1px 2px;
-	-moz-box-shadow: inset #b4b5b6 0 -1px 0 , #fff 0 1px 0 inset;
-	box-shadow: inset #b4b5b6 0 -1px 0 , #fff 0 1px 0 inset;
-	-webkit-text-shadow: #fff 1px 1px 0;
-	-moz-text-shadow: #fff 1px 1px 0;
-	text-shadow: #fff 1px 1px 0;
-	font-weight: bold;
+    background: #f2f2f2;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#dbdbdb));
+    background: -moz-linear-gradient(top, #f3f3f3, #dbdbdb);
+    background: gradient(linear, left top, left bottom, from(#f3f3f3), to(#dbdbdb));
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+    -webkit-box-shadow: inset #b4b5b6 0 -1px 0 , #fff 0 1px 0 inset, #59636c 0 -1px 2px;
+    -moz-box-shadow: inset #b4b5b6 0 -1px 0 , #fff 0 1px 0 inset;
+    box-shadow: inset #b4b5b6 0 -1px 0 , #fff 0 1px 0 inset;
+    -webkit-text-shadow: #fff 1px 1px 0;
+    -moz-text-shadow: #fff 1px 1px 0;
+    text-shadow: #fff 1px 1px 0;
+    font-weight: bold;
+    overflow: auto;
+    zoom: 1;
 }
 nav ul {
-	margin: 0;
-	padding: 5px;
+    margin: 0;
+    padding: 5px;
+    float: right;
 }
 nav li {
-	display: inline-block;
-	margin: 0;
-	padding: 0;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
 }
 nav li a {
-	display: inline-block;
-	padding: 3px 10px;
-	cursor: pointer;
-	border: 1px solid #ccc;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	color: #666;
+    display: inline-block;
+    padding: 3px 10px;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    color: #666;
 }
 nav li a:hover {
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dbdbdb));
-	background: -moz-linear-gradient(top, #fff, #dbdbdb);
-	background: gradient(linear, left top, left bottom, from(#fff), to(#dbdbdb));
-	color: #444;
+    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dbdbdb));
+    background: -moz-linear-gradient(top, #fff, #dbdbdb);
+    background: gradient(linear, left top, left bottom, from(#fff), to(#dbdbdb));
+    color: #444;
 }
 nav li a.active {
-	background: -webkit-gradient(linear, left top, left bottom, from(#6e7b87), to(#8795a2));
-	background: -moz-linear-gradient(top, #6e7b87, #8795a2);
-	background: gradient(linear, left top, left bottom, from(#6e7b87), to(#8795a2));
-	-webkit-box-shadow: #fff 0 1px 0;
-	-moz-box-shadow: #fff 0 1px 0;
-	box-shadow: #fff 0 1px 0;
-	color: #fff;
-	border-color: #59636c;
-	-webkit-text-shadow: #59636c -1px -1px 0;
-	-moz-text-shadow: #59636c -1px -1px 0;
-	text-shadow: #59636c -1px -1px 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(#6e7b87), to(#8795a2));
+    background: -moz-linear-gradient(top, #6e7b87, #8795a2);
+    background: gradient(linear, left top, left bottom, from(#6e7b87), to(#8795a2));
+    -webkit-box-shadow: #fff 0 1px 0;
+    -moz-box-shadow: #fff 0 1px 0;
+    box-shadow: #fff 0 1px 0;
+    color: #fff;
+    border-color: #59636c;
+    -webkit-text-shadow: #59636c -1px -1px 0;
+    -moz-text-shadow: #59636c -1px -1px 0;
+    text-shadow: #59636c -1px -1px 0;
+}
+
+#search {
+    width: 200px;
+    margin: 7px;
+}
+
+#wrapper {
+    min-height: 300px;
+    background: -webkit-gradient(linear, 0 0, 0 100, from(#dbdbdb), to(#f3f3f3));
+    background: -moz-linear-gradient(top, #dbdbdb, #f3f3f3);
+    background: gradient(linear, 0 0, 0 50, from(#dbdbdb), to(#f3f3f3));
+    -webkit-box-shadow: #fff 0 1px 0 inset, #999 0 1px 2px;
+    -moz-box-shadow: #fff 0 1px 0 inset, #999 0 1px 2px;
+    box-shadow: #fff 0 1px 0 inset, #999 0 1px 2px;
+    -webkit-border-radius: 0 0 5px 5px;
+    -moz-border-radius: 0 0 5px 5px;
+    border-radius: 0 0 5px 5px;
+}
+
+#list {
+    padding: 10px;
+}
+
+.candidate-list {
+    padding: 10px;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #ddd;
+    position: relative;
+}
+.candidate-list dt {
+    font-weight: bold;
+    font-size: 15px;
+}
+.candidate-list:first-child {
+    border-top: none;
+}
+.candidate-list:last-child {
+    border-bottom: none;
+}
+.candidate-list .submition {
+    color: #999;
+}
+
+.candidate-list .submition:before {
+    content: "Applided on ";
+}
+.candidate-list .tags {
+    position: absolute;
+    right: 0;
+    top: 5px;
+}
+.candidate-list .tags li {
+    display: inline-block;
+    margin: 2px;
+    padding: 2px 5px;
+    background: #b9d6f5;
+    border: 1px solid #93b8e1;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    opacity: .8;
 }
 
 
-
-#wrapper {
-	min-height: 200px;
-	background: -webkit-gradient(linear, 0 0, 0 100, from(#dbdbdb), to(#f3f3f3));
-	background: -moz-linear-gradient(top, #dbdbdb, #f3f3f3);
-	background: gradient(linear, 0 0, 0 100, from(#dbdbdb), to(#f3f3f3));
-	-webkit-box-shadow: #fff 0 1px 0 inset, #999 0 1px 2px;
-	-moz-box-shadow: #fff 0 1px 0 inset, #999 0 1px 2px;
-	box-shadow: #fff 0 1px 0 inset, #999 0 1px 2px;
+footer {
+    text-align: center;
+    color: #6e7b87;
+    padding: 20px;
 }
