link to show page

--- a/app/views/Application/box.html
+++ b/app/views/Application/box.html
@@ -26,7 +26,7 @@ $(function(){
     *{ Candidates go here }*
 #{list applications}
     <dl class="candidate-list">
-        <dt>${_.name}</dt>
+        <dt><a href="/resume/${_.id}">${_.name}</a></dt>
         <dd class="submition"><date>${_.submitted}</date></dd>
         <dd class="tags">
             <ul>
