--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,10 @@
 @import "reset.css";
+@font-face {
+    font-family: 'Neuton';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Neuton Regular'), local('Neuton'), url('/public/fonts/Neuton.ttf') format('truetype');
+}
 
 body {
     background: #d5dade;
@@ -202,6 +208,17 @@ h1 {
     -moz-text-shadow: #fff 1px 1px 0;
     text-shadow: #fff 1px 1px 0; 
 }
+
+h2 {
+    margin-top: 10px;
+    font-size: 16px;
+    font-family: 'Neuton', serif;
+    font-weight: normal;
+    -webkit-text-shadow: #fff 1px 1px 0;
+    -moz-text-shadow: #fff 1px 1px 0;
+    text-shadow: #fff 1px 1px 0; 
+}
+
 .contact {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -268,6 +285,57 @@ h1 {
     vertical-align: baseline;
 }
 
+.answer {
+    margin: 20px 0;
+}
+
+.answer .tabs {
+    background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#dbdbdb));
+    background: -moz-linear-gradient(top, #f3f3f3, #dbdbdb);
+    background: gradient(linear, left top, left bottom, from(#f3f3f3), to(#dbdbdb));
+    margin: 0;
+    padding: 5px 10px 0;
+    border-bottom: #ccc 1px solid;
+}
+
+.answer .tabs li {
+    display: inline-block;
+}
+.answer .tabs li a {
+    display: inline-block;
+    padding: 2px 8px;
+    margin-bottom: -1px;
+    font-size: 15px;
+    -webkit-text-shadow: #fff 1px 1px 0;
+    -moz-text-shadow: #fff 1px 1px 0;
+    text-shadow: #fff 1px 1px 0;
+}
+.answer .tabs li a.active {
+    color: #444;
+    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f3f3f3));
+    background: -moz-linear-gradient(top, #fff, #f3f3f3);
+    background: gradient(linear, left top, left bottom, from(#f3f3f3), to(#f3f3f3));
+    -webkit-box-shadow: #fff 0 1px 0 inset, #999 0 -1px 2px;
+    -moz-box-shadow: #fff 0 1px 0 inset, #999 0 -1px 2px;
+    box-shadow: #fff 0 1px 0 inset, #999 0 -1px 2px;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+}
+.answer label {
+    width: 500px;
+    display: block;
+    margin: 10px auto 0;
+    padding: 0;
+}
+.answer textarea {
+    width: 500px;
+    height: 100px;
+    display: block;
+    margin: 5px auto 10px;
+    padding: 0;
+    border: 1px solid #ccc;
+}
 
 footer {
     text-align: center;
