--- a/app/views/JobApplications/index.html
+++ b/app/views/JobApplications/index.html
@@ -22,7 +22,7 @@
     <dl class="contact">
         <dt>Meta</dt>
         <dd><span class="type">Submitted:</span>${resume.submitted}</dd>
-        <dd><span class="type">Status:</span>${resume.status}</dd>
+
     </dl>
 
     <div class="original-message">
@@ -39,8 +39,7 @@
     <div class="tags">
         Comments:<br/>
         #{list resume.notes}
-            <h3>${_.name}</h3>
-            <pre>${_.comment}</pre>
+            <pre>${_.comment} - ${_.name} - Rating: ${_.rating}</pre>
         #{/}
     </div>
     <div>
@@ -51,7 +50,13 @@
             </p>
             <p>
                 <label for="rating">Rating: </label>
-                <input type="text" name="rating" id="rating" />
+                <select id="rating">
+                    <option value="0" selected>no rating</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
             </p>
             <p>
                 <input type="submit" value="Submit your comment" />
