--- a/app/views/Application/candidate.html
+++ b/app/views/Application/candidate.html
@@ -36,15 +36,42 @@
         <input type="text" id="addTag" placeholder="Add a tag" />
     </div>
     <div class="discussion">
+        <h2>Comments</h2>
         <div class="list">
-            <dl>
+            <dl class="internal-message">
                 <dt>Name of the guy</dt>
                 <dd class="date"><date>11/11/11</date></dd>
                 <dd class="rate">5+</dd>
                 <dd class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</dd>
             </dl>
+            <dl class="email-message">
+                <dt>Name of the guy</dt>
+                <dd class="date"><date>11/11/11</date></dd>
+                <dd class="rate">5+</dd>
+                <dd class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</dd>
+            </dl>
+            <dl class="internal-message">
+                <dt>Name of the guy</dt>
+                <dd class="date"><date>11/11/11</date></dd>
+                <dd class="rate"><div class="cursor">5</div></dd>
+                <dd class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</dd>
+            </dl>
+            <dl class="email-message himself">
+                <dt>Name of the guy</dt>
+                <dd class="date"><date>11/11/11</date></dd>
+                <dd class="rate">5+</dd>
+                <dd class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</dd>
+            </dl>
+            <dl class="internal-message">
+                <dt>Name of the guy</dt>
+                <dd class="date"><date>11/11/11</date></dd>
+                <dd class="rate">5+</dd>
+                <dd class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</dd>
+            </dl>
+            
         </div>
         <div class="answer">
+            <h2>Add a comment</h2>
             <ul class="tabs">
                 <li><a href="#" class="active">Internal note</a></li>
                 <li><a href="#">Send an email</a></li>
@@ -53,7 +80,7 @@
                 <form>
                     <label for="internal">Message</label>
                     <textarea id="internal"></textarea>
-                    <label for="rate">Message</label>
+                    <label for="rate">Give a note</label>
                     <input type="hidden" name="rate" id="rate" />
                     <ul class="rate">
                         <li>★</li>
