--- a/app/views/Application/box.html
+++ b/app/views/Application/box.html
@@ -50,13 +50,28 @@ $(function(){
 #{list applications}
     <dl class="candidate-list">
         <dt><a class="name" href="/resume/${_.id}">${_.name}</a></dt>
-        <dd class="submition"><date>${_.submitted.format('dd MMMM yyyy hh:mm:ss')}</date></dd>
+        <dd class="submition"><date>${_.submitted ? _.submitted.format('dd MMMM yyyy hh:mm:ss') : ''}</date></dd>
         <dd class="rating">
             *{ lol | bad | good | awesome }*
             <span class="awesome"></span>
         </dd>
     </dl>
 #{/list}
+</div>
+
+<div id="pages">
+<ul
+#{list Math.max(0, pageId-4)..Math.min(pageCount-1, pageId+4)}
+    <li>
+        #{if (pageId == _)}
+        ${_}
+        #{/if}
+        #{else}
+        <a href="@{box(boxid, _)}">${_}</a>
+        #{/else}
+    </li>
+#{/}
+</ul>
 </div>
 
 <script type="text/template" charset="utf-8">
