--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -398,6 +398,16 @@ h1, h2 {
     border: 1px solid #ccc;
 }
 
+#pages li {
+    display: inline-block;
+}
+#pages {
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 20px;
+}
+
 footer {
     text-align: center;
     color: #6e7b87;
