better descrpitions for candidate view

--- a/app/views/Application/candidate.html
+++ b/app/views/Application/candidate.html
@@ -16,6 +16,8 @@
     <h1>John Doe</h1>
     <dl class="contact">
         <dt>Contact</dt>
+        <dd><span class="type">Appliyed on:</span>11/11/11, it was snowing.</dd>
+        <dd><span class="type">Status:</span>In process</dd>
         <dd><span class="type">Phone:</span>(+33) 06 12 12 12 12</dd>
         <dd><span class="type">Mail:</span>isaywhatwhat@inthe.but</dd>
     </dl>
