--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -176,7 +176,11 @@ nav li a.active {
 .candidate-list .submition {
     color: #999;
 }
-
+.candidate-list .rate {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
 .candidate-list .submition:before {
     content: "Applied on ";
 }
@@ -199,6 +203,7 @@ nav li a.active {
 
 #candidate {
     padding: 10px;
+    position: relative;
 }
 h1, h2 {
     font-size: 22px;
@@ -235,6 +240,11 @@ h1, h2 {
     display: block;
     width: 250px;
     float: left;
+}
+.contact .rate {
+    position: absolute;
+    top: 28px;
+    right: 10px;
 }
 .original-message{
     margin: 10px;
@@ -292,6 +302,7 @@ h1, h2 {
 .discussion .list dt {
     font-weight: bold;
     display: inline-block;
+    padding-left: 20px;
 }
 .discussion .list .date {
     display: inline-block;
@@ -310,10 +321,21 @@ h1, h2 {
     right: 10px;
 }
 
+.discussion .list .internal-message dt {
+    background: url(/public/images/comment.png) no-repeat;
+}
+.discussion .list .email-message dt {
+    background: url(/public/images/mail.png) no-repeat;
+}
+.discussion .list .himself dt {
+    color: #9b0000;
+}
+
+
 .rate {
     background: url(/public/images/clear-star.png) left center repeat-x;
     height: 12px;
-    width: 52px;
+    width: 52px !important;
     text-indent:-999em;
 }
 .rate .cursor {
