--- a/app/views/JobApplications/index.html
+++ b/app/views/JobApplications/index.html
@@ -62,7 +62,7 @@
                     <label for="comment">Message</label>
                     <textarea id="comment" name="comment"></textarea>
                     <label for="rating">Rating</label>
-                    <select name="rating" id="rating">
+                    <select name="rating" id="rating" style="width:100px;margin-left:60px;margin-top:-32px">
                         <option value="0" selected>no rating</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
